# faker-web3

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  test.yml
faker_web3/: __init__.py  web3.py
tests/: test_web3.py
