[tool.poetry]
name = "faker-web3"
version = "0.1.0"
description = ""
authors = ["Rares Stanciu <rcstanciu@protonmail.com>"]
readme = "README.md"
packages = [{include = "faker_web3"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
